feat: Configure Vercel for SPA routing
Updates vercel.json to correctly serve the SPA index.html for all routes when deployed, ensuring client-side routing works as expected. Also adds a comment to index.html indicating where the Vite bundle will be injected.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 </head>
   <body class="bg-white text-slate-900 antialiased overflow-x-hidden">
     <div id="root"></div>
+    <!-- Vite will inject the bundle here during build -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
