--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
   <body class="bg-white text-slate-900 antialiased overflow-x-hidden">
     <div id="root"></div>
-    <!-- Vite will inject the bundle here during build -->
+    <!-- Vite builds this into the production assets -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
