feat: Enhance social media meta tags
Update Open Graph and Twitter meta tags to include more detailed information and ensure optimal display on social media platforms, including WhatsApp. This improves the richness and appearance of shared links.

--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.flourish-landscaping.com/">
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.flourish-landscaping.com/">
     <meta property="og:title" content="Flourish Landscaping | Building Green, Living Clean">
-    <meta property="og:description" content="Leading the way in landscape design, construction, and maintenance. We create beautiful, sustainable outdoor environments that last.">
+    <meta property="og:description" content="Leading the way in landscape design, construction, and maintenance. Expert outdoor solutions for a sustainable future.">
     <meta property="og:image" content="https://www2.0zz0.com/2025/12/23/19/181773322.png">
+    <meta property="og:image:secure_url" content="https://www2.0zz0.com/2025/12/23/19/181773322.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:site_name" content="Flourish Landscaping">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.flourish-landscaping.com/">
     <meta property="twitter:title" content="Flourish Landscaping | Building Green, Living Clean">
-    <meta property="twitter:description" content="Leading the way in landscape design, construction, and maintenance. We create beautiful, sustainable outdoor environments that last.">
+    <meta property="twitter:description" content="Leading the way in landscape design, construction, and maintenance. Expert outdoor solutions for a sustainable future.">
     <meta property="twitter:image" content="https://www2.0zz0.com/2025/12/23/19/181773322.png">
 
     <!-- Favicon -->
